# trialscribe

./: .gitignore  DEPLOYMENT.md  DESIGN_ANALYSIS.md  DESIGN_IMPROVEMENTS.md  QUICKSTART.md  README.md  VALID_ICONS_REFERENCE.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  app.py  config.py  env.example  pyproject.toml  requirements.txt
backend/services/: exceptions.py  llm_client.py  llm_extractor.py  logger.py  models.py  trial_chatbot.py  trial_tools.py  trials_finder.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/patches/: spdy+4.0.2.patch  spdy-transport+3.0.0.patch
frontend/public/: index.html
frontend/src/: App.css  App.tsx  config.ts  index.css  react-icons.d.ts  types.ts
frontend/src/components/: Application.tsx  CTA.css  CTA.tsx  ComparisonSection.css  ComparisonSection.tsx  EmptyState.css  EmptyState.tsx  HeroSection.css  HeroSection.tsx  HomePage.css  HomePage.tsx  HowItWorks.css  HowItWorks.tsx  MissingFieldsForm.css  MissingFieldsForm.tsx  PatientDataDisplay.css  PatientDataDisplay.tsx  ResultsDisplay.css  ResultsDisplay.tsx  SearchParametersPanel.css  SearchParametersPanel.tsx  StatsSection.css  StatsSection.tsx  StepIndicator.css  StepIndicator.tsx  Testimonials.css  Testimonials.tsx  TranscriptInput.css  TranscriptInput.tsx  TrialChatbot.css  TrialChatbot.tsx  ValueProposition.css  ValueProposition.tsx
frontend/src/hooks/: useFavorites.ts
